--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="./src/assets/logo.png" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pop Some Tags</title>
 </head>
